--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Chris Rooney: Home</title>
-	<link rel="stylesheet" href="css/style.css">
+    	<link rel="stylesheet" href="css/foundation-float.css">
+    	<link rel="stylesheet" href="css/foundation-float.css.map">
+    	<link rel="stylesheet" href="css/foundation-prototype.css">
+    	<link rel="stylesheet" href="css/foundation-prototype.css.map">
+    	<link rel="stylesheet" href="css/foundation-rtl.css">
+    	<link rel="stylesheet" href="css/foundation-rtl.css.map">
+    	<link rel="stylesheet" href="css/foundation.css.map">
 	<link rel="stylesheet" href="css/foundation.css">
-    	
-
+    	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="grid-container">
