--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Chris Rooney: Home</title>
-    	<link rel="stylesheet" href="css/foundation-float.css">
-    	<link rel="stylesheet" href="css/foundation-float.css.map">
-    	<link rel="stylesheet" href="css/foundation-prototype.css">
-    	<link rel="stylesheet" href="css/foundation-prototype.css.map">
-    	<link rel="stylesheet" href="css/foundation-rtl.css">
-    	<link rel="stylesheet" href="css/foundation-rtl.css.map">
-    	<link rel="stylesheet" href="css/foundation.css.map">
-	<link rel="stylesheet" href="css/foundation.css">
+    	<link rel="stylesheet" href="foundation-float.css">
+    	<link rel="stylesheet" href="foundation-float.css.map">
+    	<link rel="stylesheet" href="foundation-prototype.css">
+    	<link rel="stylesheet" href="foundation-prototype.css.map">
+    	<link rel="stylesheet" href="foundation-rtl.css">
+    	<link rel="stylesheet" href="foundation-rtl.css.map">
+    	<link rel="stylesheet" href="foundation.css.map">
+	<link rel="stylesheet" href="foundation.css">
     	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -35,8 +35,8 @@
     <img src = "smallHeadshot.jpg" alt = "headshot"/>
 
     <!-- include before closing <body> tag -->
-    <script src="js/vendor.js"></script>
-    <script src="js/foundation.js"></script>
+    <script src="jvendor.js"></script>
+    <script src="foundation.js"></script>
     <script type="application/javascript">
         $(document).foundation();
     </script>
