--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     	<link rel="stylesheet" href="foundation-rtl.css.map">
     	<link rel="stylesheet" href="foundation.css.map">
 	<link rel="stylesheet" href="foundation.css">
-    	<link rel="stylesheet" href="style.css">
+    	<link rel="stylesheet" type = "css/text" href="style.css">
 </head>
 <body>
     <div class="grid-container">
