--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     	<link rel="stylesheet" href="foundation-rtl.css">
     	<link rel="stylesheet" href="foundation-rtl.css.map">
     	<link rel="stylesheet" href="foundation.css.map">
-	<link rel="stylesheet" href="foundation.css">
+	<link rel="stylesheet" type = "css/text" href="foundation.css">
     	<link rel="stylesheet" type = "css/text" href="style.css">
 </head>
 <body>
