--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Chris Rooney: Home</title>
-    	<link rel="stylesheet" href="foundation-float.css">
-    	<link rel="stylesheet" href="foundation-float.css.map">
-    	<link rel="stylesheet" href="foundation-prototype.css">
-    	<link rel="stylesheet" href="foundation-prototype.css.map">
-    	<link rel="stylesheet" href="foundation-rtl.css">
-    	<link rel="stylesheet" href="foundation-rtl.css.map">
-    	<link rel="stylesheet" href="foundation.css.map">
-	<link rel="stylesheet" type = "css/text" href="foundation.css">
-    	<link rel="stylesheet" type = "css/text" href="style.css">
+    <link rel="stylesheet" href="css/foundation-float.css">
+    <link rel="stylesheet" href="css/foundation-float.css.map">
+    <link rel="stylesheet" href="css/foundation-prototype.css">
+    <link rel="stylesheet" href="css/foundation-prototype.css.map">
+    <link rel="stylesheet" href="css/foundation-rtl.css">
+    <link rel="stylesheet" href="css/foundation-rtl.css.map">
+    <link rel="stylesheet" href="css/foundation.css.map">
+	<link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
     <div class="grid-container">
         <div class="grid-x grid-padding-x">
             <div class="cell large-auto" style="background-color: #878596;"><a href="index.html">Home</a></div>
-            <div class="cell large-auto" style="background-color: #878596;"><a href="projects.html">Projects</a></div>
+            <div class="cell large-auto" style="background-color: #4a28e2;"><a href="projects.html">Projects</a></div>
             <div class="cell large-auto" style="background-color: #878596;"><a href="resume.html">Resume</a></div>
-            <div class="cell large-auto" style="background-color: #878596;"><a href="fun.html">Fun</a></div>
+            <div class="cell large-auto" style="background-color: #4a28e2;"><a href="fun.html">Fun</a></div>
             </div>
         </div>
     </div>
@@ -35,8 +36,8 @@
     <img src = "smallHeadshot.jpg" alt = "headshot"/>
 
     <!-- include before closing <body> tag -->
-    <script src="jvendor.js"></script>
-    <script src="foundation.js"></script>
+    <script src="js/vendor.js"></script>
+    <script src="js/foundation.js"></script>
     <script type="application/javascript">
         $(document).foundation();
     </script>
