--- a/fun.html
+++ b/fun.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chris Rooney: Fun</title>
-    	<link rel="stylesheet" href="css/foundation-float.css">
-    	<link rel="stylesheet" href="css/foundation-float.css.map">
-    	<link rel="stylesheet" href="css/foundation-prototype.css">
-    	<link rel="stylesheet" href="css/foundation-prototype.css.map">
-    	<link rel="stylesheet" href="css/foundation-rtl.css">
-    	<link rel="stylesheet" href="css/foundation-rtl.css.map">
-    	<link rel="stylesheet" href="css/foundation.css.map">
-    	<link rel="stylesheet" href="css/foundation.css">
-    	<link rel="stylesheet" href="css/style.css">
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Chris Rooney: Home</title>
+        <link rel="stylesheet" href="css/foundation-float.css">
+        <link rel="stylesheet" href="css/foundation-float.css.map">
+        <link rel="stylesheet" href="css/foundation-prototype.css">
+        <link rel="stylesheet" href="css/foundation-prototype.css.map">
+        <link rel="stylesheet" href="css/foundation-rtl.css">
+        <link rel="stylesheet" href="css/foundation-rtl.css.map">
+        <link rel="stylesheet" href="css/foundation.css.map">
+        <link rel="stylesheet" href="css/foundation.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="grid-container">
@@ -24,10 +24,10 @@
                 </div>
             </div>
         </div>
-
+        <br>
         <h1>What I do for fun...</h1>
         <p>Outside of school I enjoy getting active however I can and learning new ways to do so. <br>
-            Some things I have been frequently taking part in is weightlifting, soccer, basketball, tennis, hiking, and rockclimbing. 
+            Some things I have been doing recently is weightlifting, soccer, basketball, tennis, hiking, and rockclimbing. 
         </p>
         <img src = "soccerPic2.jpg" alt = "Soccer Picture"/>
         <img src = "hikingPic.jpg" alt = "Hiking Picture"/>
