--- a/fun.html
+++ b/fun.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/foundation-rtl.css.map">
         <link rel="stylesheet" href="css/foundation.css.map">
         <link rel="stylesheet" href="css/foundation.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="grid-x grid-padding-x">
