--- a/fun.html
+++ b/fun.html
@@ -23,7 +23,7 @@
         </div>
         <br>
         <h1>What I do for fun...</h1>
-        <p>Outside of school I enjoy getting active however I can and learning new ways to do so. <br>
+        <p>Outside of school I enjoy getting active however I can and learning new ways to do so.
             Some things I have been doing recently is weightlifting, soccer, basketball, tennis, hiking, and rockclimbing. 
         </p>
         <img src = "soccerPic2.jpg" alt = "Soccer Picture"/>
